@@ -271,6 +271,7 @@ public enum ECTagNames {
 			EC_TAG_SERVERS_SAFE_SERVER_CONNECT        = 0x1709,
 			EC_TAG_SERVERS_AUTOCONN_STATIC_ONLY       = 0x170A,
 			EC_TAG_SERVERS_MANUAL_HIGH_PRIO           = 0x170B,
+			EC_TAG_SERVERS_UPDATE_URL                 = 0x170C,
 		EC_TAG_PREFS_FILES                        = 0x1800,
 			EC_TAG_FILES_ICH_ENABLED                  = 0x1801,
 			EC_TAG_FILES_AICH_TRUST                   = 0x1802,
@@ -323,7 +324,7 @@ public enum ECTagNames {
 			EC_TAG_CORETW_UL_QUEUE                    = 0x1D04,
 			EC_TAG_CORETW_SRV_KEEPALIVE_TIMEOUT       = 0x1D05,
 		EC_TAG_PREFS_KADEMLIA                     = 0x1E00,
-			EC_TAG_KADEMLIA_URL_LIST                  = 0x1E01
+			EC_TAG_KADEMLIA_UPDATE_URL                = 0x1E01
 };
 public enum EC_DETAIL_LEVEL {
 	EC_DETAIL_CMD           = 0x00,
@@ -361,6 +362,7 @@ public enum EcPrefs {
 	EC_PREFS_DIRECTORIES    = 0x00000200,
 	EC_PREFS_STATISTICS     = 0x00000400,
 	EC_PREFS_SECURITY       = 0x00000800,
-	EC_PREFS_CORETWEAKS     = 0x00001000
+	EC_PREFS_CORETWEAKS     = 0x00001000,
+	EC_PREFS_KADEMLIA       = 0x00002000
 };
 }
